decreased sizes on mobile menu nav for small media query, fixed pressure washing navigation, took position fixed off of footer

--- a/app/styles/globals/index.scss
+++ b/app/styles/globals/index.scss
@@ -30,20 +30,17 @@ main {
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 100%;
   background-color: rgba(109,109,109,1);
   padding: 20px 0;
 
-  p {
-    padding: 1vh 0;
+  p,
+  a {
+    display: block;
+    padding: 5px 0;
     margin: 0;
+    font-size: 0.75rem;
     text-transform: uppercase;
-    font-size: 1rem;
     line-height: 1;
     text-align: center;
     color: rgba(255, 255, 255, 0.8);
